<resources>
    <string name="app_name">BOJ Mobile</string>
    <string name="boj_mobile">BOJ Mobile</string>
    <string name="login_account">Login Account</string>
    <string name="personal_email">Personal Email</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="Email">Email</string>
    <string name="Name">Name</string>
    <string name="password">Password</string>
    <string name="new_here_create_account">New Here ? Create Account</string>
    <string name="already_registered_login_here">Already Registered ? Login Here</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="phone_number">phone number</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="desc_button">home page buttons</string>
    <string name="title_activity_second">SecondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_my_passbook">MyPassbook</string>
    <string name="BOJ_CopyRight">
        <p> &#xA9; BOJ_Mobile </p>
    </string>

</resources>